# Constellation

./: .gitignore  CMakeLists.txt  ReadMe.md
debug/: CMakeCache.txt  Constellation  Makefile  cmake_install.cmake
examples/: X37B.txt  inputs.txt  satellites.txt
src/: cleanup.h  error.h  input_parser.cpp  input_parser.h  main.cpp  math_helpers.cpp  math_helpers.h  resource_path.h  satellite.cpp  satellite.h  texture.h
